<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ruslan.myappporfolio.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_nanodegree_apps"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/popular_movies"
        android:background="@color/colorPrimaryDark"
        android:id="@+id/button_movies"
        android:layout_below="@+id/textView"
        android:layout_alignRight="@+id/button_bigger"
        android:layout_alignEnd="@+id/button_bigger"
        android:layout_margin="5dp"
        android:onClick="onToast"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/stock_hawk"
        android:id="@+id/button_hawk"
        android:background="@color/colorPrimaryDark"
        android:layout_below="@+id/button_movies"
        android:layout_alignLeft="@+id/button_movies"
        android:layout_alignStart="@+id/button_movies"
        android:layout_alignRight="@+id/button_go"
        android:layout_alignEnd="@+id/button_go"
        android:layout_margin="5dp"
        android:onClick="onToast"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/build_it_bigger"
        android:id="@+id/button_bigger"
        android:background="@color/colorPrimaryDark"
        android:layout_below="@+id/button_hawk"
        android:layout_alignRight="@+id/button_go"
        android:layout_alignEnd="@+id/button_go"
        android:layout_margin="5dp"
        android:onClick="onToast"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/make_your_app_material"
        android:id="@+id/button_material"
        android:background="@color/colorPrimaryDark"
        android:layout_below="@+id/button_bigger"
         android:layout_alignLeft="@+id/button_bigger"
        android:layout_alignStart="@+id/button_bigger"
        android:layout_alignRight="@+id/button_bigger"
        android:layout_alignEnd="@+id/button_bigger"
        android:layout_margin="5dp"
        android:onClick="onToast"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/go_ubiquitous"
        android:id="@+id/button_go"
        android:background="@color/colorPrimaryDark"
        android:layout_below="@+id/button_material"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:onClick="onToast"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/capstone"
        android:id="@+id/button_capstone"
        android:background="@color/colorPrimaryDark"
        android:layout_below="@+id/button_go"
        android:layout_alignRight="@+id/button_go"
        android:layout_alignEnd="@+id/button_go"
        android:layout_margin="5dp"
        android:onClick="onToast"/>
</RelativeLayout>
